--- a/30주차.md
+++ b/30주차.md
@@ -1,38 +1,45 @@
 # Error & Exception
 - Java에서의 Error와 Exception의 차이점?
+  <details>
+      
     - Error : 컴파일 시 문법적인 오류와 런타임 시 널 포인트 참조와 같은 오류로 프로세스를 종료시킬 수 있다.
     - Exception은 컴퓨터 시스템의 동작 도중 예기치 않았던 이상 상태가 발생하여 수행중인 프로그램이 영향을 받는 것
+
+    </details>
 - JAVA의 Exception의 2가지 종류에 대해 설명해주세요
-    1. Checked Exception
-        
-        RuntimeException 이외에 있는 모든 예외
-        
-    2. UnChecked Exception
-        컴파일 때 체크되지 않고, Runtime에 발생하는 Exception
+    <details>    
+    1. Checked Exception :RuntimeException 이외에 있는 모든 예외
+    2. UnChecked Exception : 컴파일 때 체크되지 않고, Runtime에 발생하는 Exception
+    </details>  
 - JAVA에서의 Exception 핸들링의 2가지 방법은?
+  <details>
+      
     1. try ~ catch로 예외에 대한 최종적인 책임을 지고 처리하는 방식
     2. throws Exception을 이용해서 발생한 예외의 책임을 호출하는 쪽이 책임지도록 하는 방식
+       
+  </details>
 - Java에서는 Error와 Eception을 클래스로 구현해서 처리하는데 이 두 클래스가 공통적으로 상속받은 class는?
-    
+    <details>
     Throwable. 그렇다면 Throwable은 어떤 클래스를 상속받나요? ⇒ Object
-    
+    </details>
 - JAVA 에서 객체 참조가 없는 상태에서 null값을 참조변수로 접근할 때 발생하는 Exception은?
-    
+    <details>
     **NullPointException**
-    
+    </details>
 - 그렇다면 main 함수에서 throws Exception을 할 경우엔 예외처리를 어디에 넘기는 건가요?
-    
+    <details>
     JVM
-    
+    </details>
 
 # JAVA Stream
 
 - 왜 JAVA에서 Stream API가 등장하였나요?
-    
+    <details>
     기존에 불가능하던 `함수형 프로그래밍`을 가능하게 하고, 데이터를 추상화하고, 데이터의 종류에 상관없이 같은 방식으로 데이터를 처리할 수 있게하여 재사용성을 높이기 위해
-    
+    </details>
 - Collection과 Stream의 차이점은?
-    
+    <details>
+        
     **<Collection>**
     
     - 모든 값을 메모리에 저장하는 자료구조이다, 그래서 Collection에 추가하기 전에 미리 계산이 완료되어있어야 한다.
@@ -42,11 +49,17 @@
     
     - 요청할 때만 요소를 계산한다. `내부 반복`을 사용하므로 추출 요소만 선언해주면 알아서 반복 처리를 진행한다.
     - 스트림에 요소를 따로 추가 혹은 제거하는 작업은 불가능
+ 
+    </details>
 - Stream API의 특징은?
+  <details>
     - 원본의 데이터를 변경하지 않는다.
     - 일회용이다.
     - 내부 반복으로 작업을 처리한다.
+  </details>
 - Stream API의 3가지 단계는?
+  <details>
+      
     1. 생성하기
         1. Stream 객체를 생성하는 단계
         2. Stream은 재사용이 불가능하므로, 닫히면 다시 생성해야한다.
@@ -56,30 +69,40 @@
     3. 결과 만들기
         1. 가공된 데이터로부터 원하는 결과를 만들기 위한 최종 연산
         2. Stream의 요소들을 소모하면서 연산이 수행되기 때문에 1번만 처리가 가능하다.
+      
+    </details>
 - Stream과 병렬 스트림의 차이점은?
-    
+    <details>
     Stream - 단일 스레드에서 순차적으로 처리된다.
     
     병렬 스트림 - 멀티 스레딩을 사용하여 요소를 병렬로 처리한다.
-    
+    </details>
 
 [[Java] Stream API에 대한 이해 - (1/5)](https://mangkyu.tistory.com/112)
 
 # Record
 
 - JAVA Record에서의 제한은?
+   <details>
     - 레코드는 암묵적으로 final class (상속불가)이고, abstract 선언이 불가능하다.
     - 다른 클래스를 상속 받을 수 없으며, 인터페이스 구현은 가능하다.
+   </details>
 - 왜 Java Record를 사용할까요?
+  <details>
     - 멤버 변수의 접근 권한을 제한할 수 있기 때문에, 보안성이 향상됩니다.
     - 멤버 변수의 초기값을 지정할 수 있기 때문에, 초기화 작업이 간편해집니다.
     - 멤버 변수의 이름을 생략할 수 있기 때문에, 코드 작성이 간편해집니다.
     - 멤버 변수의 순서를 지정할 수 있기 때문에, 코드의 가독성이 향상됩니다.
     - 멤버 변수의 타입을 지정할 수 있기 때문에, 데이터의 안정성이 향상됩니다
+  </details>
 - 그러면 Record를 사용하는 상황은 어떤 상황일까요?
+  <details>
     - 데이터 저장과 접근이 주된 목적인 경우.
     - 불변성이 필요한 경우.
     - 간결한 코드를 작성하고자 할 때.
     - 동등성 비교 및 해시코드 생성이 필요한 경우.
     
     ⇒ DTO
+  </detilas
+
+<
