--- a/30주차.md
+++ b/30주차.md
@@ -11,6 +11,44 @@
     1. Checked Exception :RuntimeException 이외에 있는 모든 예외
     2. UnChecked Exception : 컴파일 때 체크되지 않고, Runtime에 발생하는 Exception
     </details>  
+- Checked Exception과 Unchecked Exception 중 어느 것이 더 권장되나?
+  <details>
+    
+    대부분 Checked Exception보다는 Unchecked Exception 사용을 권장한다. Checked Exception의 경우 사용하는 모든 곳에 throws를 남겨야하는데 이 문제는 의존성 문제를 야기한다. <br> 예를 들어 가장 하위에서 SQLException(Checked Exception)를 던진다고 해보자. 그럼 상위 서비스, 컨트롤러도 SQLException을 처리하기 위해서 throws SQLException을 붙이게 된다. SQLException은 JDBC 기술이므로 service, controller는 JDBC에 의존하게 된다. 결국 JDBC 기술을 다른 기술로 교체하게 되면 연결된 모든 것들을 전부 교체해야하는 문제가 생긴다.
+
+  </details>
+- 대표적인 Exception 몇가지를 말하고 설명해보세요
+  <details>
+    - NullPointerException : Null 레퍼런스를 참조할때 발생, 뭔가 동작시킬 때 발생합니다.
+    - IndexOutOfBoundsException : 배열과 유사한 자료구조(문자열, 배열, 자료구조)에서 범위를 벗어난 인덱스 번호 사용으로 발생합니다.
+    - FormatException : 문자열, 숫자, 날짜 변환 시 잘못된 데이터(ex. "123A" -> 123 으로 변환 시)로 발생하며, 보통 사용자의 입력, 외부 데이터 로딩, 결과 데이터의 변환 처리에서 자주 발생합니다.
+    - ArthmeticException : 정수를 0으로 나눌때 발생합니다.
+    - ClassCastException : 변환할 수 없는 타입으로 객체를 변환할 때 발생합니다.
+    - IllegalArgumentException : 잘못된 인자 전달 시 발생합니다.
+    - IOException : 입출력 동작 실패 또는 인터럽트 시 발생합니다. 
+    - IllegalStateException : 객체의 상태가 매소드 호출에는 부적절한 경우에 발생합니다.
+    - ConcurrentModificationException : 금지된 곳에서 객체를 동시에 수정하는것이 감지될 경우 발생합니다.
+    - UnsupportedOperationException : 객체가 메소드를 지원하지 않는 경우 발생합니다.
+    
+https://movefast.tistory.com/12?category=765934
+  </details>
+- JAVA8에서 추가된 내용에 대해 말하시오.
+<details>
+  
+  - optional
+  - stream
+  - lambda
+  - localDateTime
+  - default 메서드
+  - 인터페이스는 메서드 정의만 가능하고 구현은 불가능했는데 default 메서드 개념이 생기면서 인터페이스에 구현된 메서드도 추가가 가능해졌다.cf) 기존 date의 문제점
+  - 불변 객체가 아님
+  - 헷갈리는 월 지정(1월을 0으로 표현)
+  - 일관성 없는 요일 상수 (어디서는 일요일이 0 어디서는 1)
+  - Date와 Calendar 객체의 역할 분담(Date만으로 부족해서 왔다갔다 해야함)
+  -  상수 필드 남용
+
+
+</details>
 - JAVA에서의 Exception 핸들링의 2가지 방법은?
   <details>
       
@@ -81,7 +119,10 @@
 [[Java] Stream API에 대한 이해 - (1/5)](https://mangkyu.tistory.com/112)
 
 # Record
-
+- Record 는 자바 몇버전부터 생겨났나요?
+  <deatils>
+  14
+  </details>
 - JAVA Record에서의 제한은?
    <details>
     - 레코드는 암묵적으로 final class (상속불가)이고, abstract 선언이 불가능하다.
@@ -103,6 +144,6 @@
     - 동등성 비교 및 해시코드 생성이 필요한 경우.
     
     ⇒ DTO
-  </detilas
+  </detilas>
 
-<
+
