--- a/31주차.md
+++ b/31주차.md
@@ -7,7 +7,7 @@
 - handshake
 
 ## 질문
-
+## Interend String in Java
 - java에서 native 키워드는 어떤 것인가요?
     <details>
       native 키워드 Java 프로그램에서 다른언어(C,C++,어셈블리 등)로 작성된 코드를 실행할 수 있는 JNI 키워드 입니다.
